src/tailwind/scrollbar.css
@theme {
}

@property --ui-scrollbar-width {
  syntax: '<length-percentage>';
  inherits: false;
  initial-value: initial;
}

@property --ui-scrollbar-thumb-color {
  syntax: '<color>';
  inherits: false;
  initial-value: initial;
}

@property --ui-scrollbar-track-color {
  syntax: '<color>';
  inherits: false;
  initial-value: initial;
}

@property --ui-scrollbar-thumb-radius {
  syntax: '<length-percentage>';
  inherits: false;
  initial-value: initial;
}

@property --ui-scrollbar-track-radius {
  syntax: '<length-percentage>';
  inherits: false;
  initial-value: initial;
}

@layer base {
  *,
  *::after,
  *::before {
    --ui-scrollbar-width: 8px;
    --ui-scrollbar-thumb-color: color-mix(
      in oklab,
      var(--color-on-surface) 38%,
      transparent
    );
    --ui-scrollbar-track-color: transparent;
    --ui-scrollbar-thumb-radius: 9999px;
    --ui-scrollbar-track-radius: 0px;
  }

  @supports selector(::-webkit-scrollbar) {
    ::-webkit-scrollbar {
      width: var(--ui-scrollbar-width);
      height: var(--ui-scrollbar-width);
    }

    ::-webkit-scrollbar-track {
      background-color: var(--ui-scrollbar-track-color);
      border-radius: var(--ui-scrollbar-track-radius);
    }

    ::-webkit-scrollbar-thumb {
      background-color: var(--ui-scrollbar-thumb-color);
      border-radius: var(--ui-scrollbar-thumb-radius);
      border: 2px solid var(--ui-scrollbar-track-color);
      background-clip: content-box;
    }

    ::-webkit-scrollbar-corner {
      background-color: var(--ui-scrollbar-track-color);
    }
  }

  @supports not selector(::-webkit-scrollbar) {
    *,
    *::after,
    *::before {
      scrollbar-color: var(--ui-scrollbar-thumb-color)
        var(--ui-scrollbar-track-color);
      scrollbar-width: thin;
    }
  }
}

